<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pozadina"
    tools:context=".PocetniActivity">


    <Button
        android:id="@+id/btn2"
        android:layout_width="117dp"
        android:layout_height="95dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="252dp"
        android:backgroundTint="@color/black"
        android:text="@string/otok_krk"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="117dp"
        android:layout_height="95dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="352dp"
        android:text="@string/otok_cres"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:backgroundTint="@color/black" />


    <Button
        android:id="@+id/btn4"
        android:layout_width="117dp"
        android:layout_height="95dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="447dp"
        android:text="@string/otok_lo_inj"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:backgroundTint="@color/black"
        />
    <Button
        android:id="@+id/btn5"
        android:layout_width="117dp"
        android:layout_height="95dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="559dp"
        android:text="@string/otok_rab"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:backgroundTint="@color/black"
        />

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="79dp"
        android:layout_height="77dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="300dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/logo"
        />

    <TextView
        android:layout_width="186dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="49dp"
        android:gravity="center"
        android:text="I Z B O R N I K"
        android:textSize="24sp"
        android:textStyle="bold|italic" />


</RelativeLayout>